[tool.poetry]
name = "dasktest"
version = "0.1.0"
description = ""
authors = ["Zhu Weiji <zhuweiji1997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dask = {extras = ["complete"], version = "^2023.2.0"}
httpx = "^0.23.3"
Flask = "^2.2.3"
tomli = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
